# plastinka_sales_predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  t.py  test_config_loading.py
.github/workflows/: ci.yml  version-sync.yml
deployment/: README.md  __init__.py  nginx.production.conf  postman_collection.json  run.py
deployment/app/: __init__.py  config.py  dependencies.py  logger_config.py  main.py
deployment/app/api/: __init__.py  admin.py  auth.py  health.py  jobs.py  models_configs.py  models_params.py  predictions.py  results.py
deployment/app/cloud_integration/client/: function_client.py  storage_client.py
deployment/app/cloud_integration/config/: cloud_config.py
deployment/app/datasphere_integration/: client.py
deployment/app/db/: __init__.py  backup_service.py  connection.py  data_access_layer.py  data_retention.py  database.py  exceptions.py  feature_storage.py  query_method.py  schema.py  schema_postgresql.py  types.py  utils.py
deployment/app/db/queries/: __init__.py  configs.py  core.py  features.py  jobs.py  models.py  multiindex.py  predictions.py  processing_runs.py  results.py  retry_events.py
deployment/app/models/: __init__.py  api_models.py
deployment/app/services/: __init__.py  auth.py  data_processor.py  datasphere_service.py  prediction_service.py  report_service.py  training_service.py
deployment/app/services/job_registries/: input_preparator_registry.py  job_type_registry.py  result_processor_registry.py
deployment/app/utils/: __init__.py  batch_utils.py  environment.py  error_handling.py  file_utilities.py  file_validation.py  requirements_hash.py  retry.py  retry_monitor.py  validation.py
deployment/data/: plastinka.db
deployment/datasphere/: client.py  prepare_datasets.py
deployment/datasphere/datasphere_job/: config.yaml  train_and_predict.py
deployment/infrastructure/: README.md  main.tf  terraform.tfvars  variables.tf  versions.tf
deployment/infrastructure/envs/prod/: IMPORT_GUIDE.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deployment/infrastructure/modules/datasphere_community/: main.tf  outputs.tf  variables.tf
deployment/infrastructure/modules/datasphere_project/: main.tf  outputs.tf  variables.tf
deployment/infrastructure/modules/service_account/: main.tf  outputs.tf  variables.tf
deployment/scripts/: check_environment.py  cloud_requirements.txt  deploy_cloud_functions.py  generate_api_keys.py  generate_api_keys_simple.py  migrate_db.py
deployment/tests/: conftest.py  test_api_health.py  test_api_jobs.py  test_cloud_integration.py  test_feature_storage.py  test_health.py  test_performance.py  test_validation.py
docs/: api_documentation.md  architecture.md  cloud_function_interfaces.md  deployment_guide.md  environment_variables.md
plastinka_sales_predictor/: __init__.py  callbacks.py  data_preparation.py  logger_setup.py  losses.py  metrics.py  model.py  requirements.txt  setup.cfg  training_utils.py  tuning_utils.py
plastinka_sales_predictor/cloud_functions/prediction/: main.py
plastinka_sales_predictor/cloud_functions/training/: main.py
plastinka_sales_predictor/datasphere_job/: __init__.py  config.yaml  requirements.txt  train_and_predict.py
plastinka_sales_predictor/datasphere_jobs/: __init__.py
plastinka_sales_predictor/datasphere_jobs/train/: config.yaml  requirements.txt  train_and_predict.py
plastinka_sales_predictor/datasphere_jobs/tune/: config.yaml  hyperparameter_tuning.py  requirements.txt
scripts/: install.py  prepare_datasets.py  train.py
src/plastinka_sales_predictor/: data_preparation.py  losses.py
tests/: __init__.py  conftest.py
tests/datasphere_integration/: test_client.py  test_predictions_storage.py
tests/datasphere_job/: test_job_config.py  test_train_and_predict.py
tests/deployment/: __init__.py  conftest.py  test_api_admin.py  test_api_health.py  test_api_jobs.py  test_api_main.py  test_api_models_params.py  test_app.py  test_config.py  test_database.py  test_db_connection_management.py  test_db_connection_management_combined.py  test_db_connection_management_unified.py  test_db_diagnostics.py  test_feature_storage.py  test_minimal.py  test_minimal_app.py  test_minimal_client.py  test_minimal_datasphere.py  test_minimal_fixture.py  test_minimal_import.py  test_minimal_main.py  test_minimal_reset_retry_stats.py  test_minimal_retry_monitor.py  test_pyfakefs_smoke.py  test_reset_retry_stats_direct.py  test_reset_retry_stats_endpoint_direct.py  test_retry_monitor_debug.py  test_retry_monitor_isolation.py  test_retry_monitor_lock.py  test_retry_monitor_only.py  test_schema_import.py  test_validation.py
tests/deployment/app/: conftest.py
tests/deployment/app/api/: conftest.py  test_api_admin.py  test_api_health.py  test_api_jobs.py  test_api_main.py  test_api_models_params.py  test_docs_security.py  test_predictions.py  test_results.py  toy_test_api_jobs.py
tests/deployment/app/datasphere/: conftest.py  test_datasphere_client.py  test_datasphere_pipeline_integration.py  test_predictions_storage.py
tests/deployment/app/db/: conftest.py  test_data_retention.py  test_database.py  test_database_core.py  test_database_domain.py  test_database_requirements.py  test_database_resilience.py  test_database_retry.py  test_database_security.py  test_database_setup.py  test_database_transactions.py  test_feature_storage.py  test_foreign_key_constraints.py  test_model_registration.py  test_regression_jsonb_parsing.py  test_regression_unique_violation.py
tests/deployment/app/services/: conftest.py  test_database_setup.py  test_datasphere_cloning.py  test_datasphere_service.py  test_datasphere_service_base.py  test_datasphere_service_resilience.py  test_datasphere_service_utils.py  test_report_service.py  test_report_service_enrichment.py  test_save_model_file_and_db.py
tests/plastinka_sales_predictor/data_preparation/: test_categorize_prices.py  test_dataset_comparison.py  test_pipeline_runner.py  test_process_data.py  test_utils.py
tests/plastinka_sales_predictor/datasphere_job/: test_train_and_predict.py
(+11 files in other folders)
