[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plastinka_sales_predictor"
version = "0.1.0"
description = "A machine learning model for predicting sales using advanced metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "backoff>=2.2.1",
    "boto3>=1.38.2",
    "botocore>=1.38.2",
    "click>=8.1.8",
    "configspace<=0.7.1",
    "darts>=0.34.0",
    "dill>=0.3.9",
    "fastapi>=0.115.12",
    "hpbandster>=0.7.4",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "ray[default]>=2.44.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["plastinka_sales_predictor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
