[metadata]
name = plastinka_sales_predictor
version = 0.9.11
description = Sales prediction model for Plastinka
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
include =
    plastinka_sales_predictor* 